# ductile-loads

./: .gitignore  404.html  README.md  fix_llmstxt_pipes.py  index.html  index.md  llms-full.txt  llms.txt  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  publish.yml
api-reference/: index.html  index.md
docs/: api-reference.md  examples.md  formats.md  getting-started.md  index.md
examples/: index.html  index.md
formats/: index.html  index.md
getting-started/: index.html  index.md
search/: search_index.json
src/ductile_loads/: __init__.py  llms.txt  loads.py
tests/: conftest.py  test_charts.py  test_comparison.py  test_conversion.py  test_display.py  test_envelope.py  test_factor.py  test_io_ansys.py  test_io_json.py  test_models.py  test_utils.py
tests/sample_data/: malformed_ansys.inp  simple_ansys.inp  simple_loadset.json
